# hreader

./: .gitignore  CHANGELOG.md  default.nix  ghc-9.6.3.yaml  hreader.cabal  shell.nix  stack.yaml  universal-handler.cabal
.github/forwkflows/: haskell-ci.yml
examples/: Main.hs
nix/: sources.json
src/Control/Handler/: Universal.hs
src/Control/Handler/Universal/: Class.hs
src/Control/Monad/: HReader.hs
src/Control/Monad/HReader/: Class.hs
