name:                hreader
version:             0.0.1

synopsis: Generalization of newtype wrappers with all this
          'HasConnection' and 'HasManager' typeclass instances.

license:             BSD3
license-file:        LICENSE
author:              Aleksey Uimanov
maintainer:          s9gf4ult@gmail.com
category:            Control
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall

  default-extensions: CPP
                    , DataKinds
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , MultiParamTypeClasses
                    , StandaloneDeriving
                    , TypeFamilies
                    , UndecidableInstances

  build-depends:       base  >= 4.7   && < 5
                     , exceptions
                     , hset  >= 0.1.0 && < 1.0.0
                     , mmorph
                     , monad-control
                     , mtl
                     , transformers-base

  exposed-modules:     Control.Monad.HReader
                     , Control.Monad.HReader.Class
